tests/snapshots/cli__reference_files@term__1.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/1.term
---
status: 0
stdout:
  - "1496175319272.3525"
stderr: []
