tests/snapshots/cli__reference_files@term__10.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/10.term
---
status: 0
stdout:
  - "14711169.756000001"
stderr: []
