tests/snapshots/cli__reference_files@term__12.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/12.term
---
status: 0
stdout:
  - "-900763645706.9586"
stderr: []
