tests/snapshots/cli__reference_files@term__13.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/13.term
---
status: 0
stdout:
  - "92944714.1"
stderr: []
