tests/snapshots/cli__reference_files@term__14.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/14.term
---
status: 0
stdout:
  - "594668935457.0657"
stderr: []
