tests/snapshots/cli__reference_files@term__15.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/15.term
---
status: 0
stdout:
  - "6799227573594309"
stderr: []
