tests/snapshots/cli__reference_files@term__16.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/16.term
---
status: 0
stdout:
  - "-861665.282"
stderr: []
