tests/snapshots/cli__reference_files@term__17.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/17.term
---
status: 0
stdout:
  - "3615852224726527600000"
stderr: []
