tests/snapshots/cli__reference_files@term__19.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/19.term
---
status: 0
stdout:
  - "-4597332063755187000000"
stderr: []
