tests/snapshots/cli__reference_files@term__2.term.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/term/2.term
---
status: 0
stdout:
  - "-9273198036974.64"
stderr: []
